# benchmarks

./: .editorconfig  .gitignore  .gitpod.yml  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  pyrightconfig.json  setup.cfg  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci.yml
docs/: computation-times-1cpu.yaml  computation-times-8cpu.yaml  conf.py  index.md  visualize-jax-benchmark.ipynb  wigner-simplification.ipynb  zeta-simplification.ipynb
scripts/: execute_jax_benchmark.py  jaxifysympy.py  visualize_jax_benchmark.py
