[metadata]
name = benchmarks
description = Benchmarks for amplitude analysis frameworks

[options]
python_requires = >=3.7
install_requires =
    matplotlib
    polarization-sensitivity @ git+https://github.com/redeboer/polarization-sensitivity@15f5ce0
    tensorwaves[jax] >=0.4.5  # lambdify sympy.Indexed

[options.extras_require]
jupyter =
    jupyterlab >=3.0
    jupyterlab-code-formatter
format =
    black
    isort
sty =
    %(format)s
    pre-commit >=1.4.0
dev =
    %(jupyter)s
    %(sty)s
    tox >=1.9  # for skip_install, use_develop
