[metadata]
name = benchmarks
description = Benchmarks for amplitude analysis frameworks

[options]
python_requires = >=3.7
install_requires =
    matplotlib
    polarization-sensitivity @ git+https://github.com/redeboer/polarization-sensitivity@15f5ce0
    tensorwaves[jax] >=0.4.5  # lambdify sympy.Indexed

[options.extras_require]
doc =
    myst-nb >=0.14  # nb_ configuration prefixes
    myst-parser[linkify]
    Sphinx >=3
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-copybutton
    sphinx-togglebutton
jupyter =
    aquirdturtle-collapsible-headings
    jupyterlab >=3.0
    jupyterlab-code-formatter
    jupyterlab-myst; python_version >="3.7.0"
format =
    black
    isort
sty =
    %(format)s
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
