[metadata]
name = benchmarks
description = Benchmarks for amplitude analysis frameworks
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
license = GPLv3 or later
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
install_requires =
    matplotlib
    polarization-sensitivity @ git+https://github.com/redeboer/polarization-sensitivity@15f5ce0
    tensorwaves[jax] >=0.4.5  # lambdify sympy.Indexed

[options.extras_require]
doc =
    myst-nb >=0.14  # nb_ configuration prefixes
    myst-parser[linkify]
    pandas
    Sphinx >=3
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-copybutton
    sphinx-togglebutton
jupyter =
    aquirdturtle-collapsible-headings
    jupyterlab >=3.0
    jupyterlab-code-formatter
    jupyterlab-myst; python_version >="3.7.0"
format =
    black
    isort
sty =
    %(format)s
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
